<resources>
    <string name="app_name">mCartoLearn</string>
    <string name="group_details_title">Group details</string>
    <string name="map_main_title">Route map</string>
    <string name="quiz_main_title">Time to learn</string>
    <string name="checkpoints_main_title">Choose your checkpoint:</string>
    <string name="answers_main_title">Your answers</string>
    <string name="edit_answers_title">Edit your answers</string>
    <string name="info_title">Info</string>
    <string name="chekcpoint_comprehension_question_subtitle">Give your definition</string>
    <string name="no_answer">NOT ANSWERED</string>
    <string name="done">Done</string>
    <string name="quiz_chk1_answ">Checkpoint 1: Elevation tints</string>
    <string name="quiz_chk2_answ">Checkpoint 2: Hachuring</string>
    <string name="quiz_chk3_answ">Checkpoint 3: Shading</string>
    <string name="quiz_chk4_answ">Checkpoint 4: Contour lines and elevations</string>
    <string name="question">Question:</string>
    <string name="answer">Your answer:</string>
    <string name="answers_activity_chk3_question">What is shading? Please give your definition with mentioning some of its characteristics: when is it used, what is it used for, which elements are important, etc.</string>
    <string name="answers_activity_chk4_question">What are isolines? Try to think of how can they be created. Does more than one type exist? Try to name them. What do they represent? Which terrain characteristics they show on a map? Can you think of something more?</string>
    <string name="quiz_no_answer">It looks like you did not answer this one yet.</string>
    <string name="type_answer_here">Type your answer here…</string>
    <string name="answer_missing">You did not answer the question. Try again after typing an answer :)</string>
    <string name="dialog_exit">If you leave, your score will not be saved.</string>
    <string name="dialog_successfully_finished"><big>Well done! Topic completed. </big>\n\nRemember, you can view and edit your answers in the <b>Review answers</b>.</string>
    <string name="dialog_wrong_answer">Nice try, but not correct. Try discussing it further.</string>
    <string name="dialog_okay">Okay.</string>
    <string name="dialog_location_permission_denied">Please note: For using self-positioning you will need to allow location permission.</string>
    <string name="dialog_permission_rationale_location">Access to the location service is required to demonstrate the \\\'my location\\\' feature, which shows your current location on the map.</string>
    <string name="dialog_bummer"><b>Oh no, it’s a Bummer! :/</b>\nIt’s not sending an e-mail so far, but nice that you’ve reached the end.\n\n<i>Make sure you give feedback on your results and answers personally to professors this time :)</i></string>
    <string name="toast_changes_saved">Good job! Changes saved.</string>
    <string name="toast_changes_dismissed">Looks like you were happy with your answers :)</string>
    <string name="toast_permission_required">Location permission is required for this demo.</string>
    <string name="selection_missing">You did not answer the question. Try selecting an answer.</string>
    <string name="info_lecture_goals1">Dear student, this app was developed for an outdoor exercise for participants of the “Alpine Cartographic Field School.” It covers the topic of terrain representation on maps. There are four main cartographic methods used for it:</string>
    <string name="info_lecture_goals3">1. Contour lines and elevations\n 2. Shading\n 3. Elevation tints\n 4. Hachuring</string>
    <string name="info_lecture_goals4">Your task is to complete all the quiz topics and submit your results.</string>
    <string name="info_group_details">Save your group’s number (will be assigned by professors) and the names of its members. This info will be submitted along with your results for the evaluation. Additionally, you may also name your group whatever you like :)</string>
    <string name="info_route">Each of the four quiz topics relates to one of the four checkpoints. You can find the checkpoints marked on the hiking route on the map. These locations relate to questions in quiz topics and will help you in answering them.</string>
    <string name="info_quiz">Complete each of the four topics.</string>
    <string name="info_checkpoints">Each checkpoint represents one cartographic method for displaying relief on maps. Once you start a topic, it’s possible to leave and restart it,  but the ones competed in the first try are better graded at the end! Otherwise, it wouldn’t be fair, right?</string>
    <string name="info_lectures1">Each topic is like a small quiz with questions; you need to answer correctly to a question to proceed to the next one. <b>There is no previous theoretical input given!</b> Don’t worry; it is not hard if you focus. <b>Just think at loud, discuss and debate with your colleagues in the group to find correct answers.</b> Some questions are related to previous ones, so remembering the previous correct answers will help you.</string>
    <string name="info_comprehension">At the end of each topic, you will have an open question. Here, you have to put in your own words what you have learned about the cartographic method. Use what you have learned in the previous questions to compel a meaningful summary.</string>
    <string name="info_review_answers">After completing all the checkpoints, you may review your answers to the four open questions. If you like, make changes before submitting them.</string>
    <string name="info_score_1">You will collect points at each question:</string>
    <string name="info_score_2"><b>+2 points</b> for answering in one attempt,\n<b>+1 point</b> for answering in two attempts,\n<b>+0 points</b> for more than two attempts.</string>
    <string name="info_score_3">The final score sums points from each of the checkpoints.<i>Try to get a higher score by making meaningful discussions in finding the right answers!</i></string>
    <string name="info_submit">Okay, you answered it all? Congratulations! Press <b>Submit</b> and send your results. (You will need an internet connection for that.)</string>
    <string name="info_copyright">Developed by Moris Zahtila\nSupervised by Prof. Dirk Burghardt\nTU Dresden. Last revision: 2019.</string>
    <string name="group_det_nam">Number</string>
    <string name="group_det_num">Name</string>
    <string name="group_det_mem">Members</string>
    <string name="group_det_num_hint">1, 2, 3&#8230;</string>
    <string name="group_det_nam_hint">Give your group a name&#8230;</string>
    <string name="group_det_mem_hint">Type names here&#8230;</string>
    <string name="quiz_lecture1">Elevation tints</string>
    <string name="quiz_lecture2">Hachuring</string>
    <string name="quiz_lecture3">Shading</string>
    <string name="quiz_lecture4">Contour lines</string>
    <string name="checkpoint_hint1">See the example: Click the toolbar button.</string>
    <string name="checkpoint_hint2">Click the toolbar button.</string>
    <string name="checkpoint_hint3">(Rotate the screen 90 degrees to the left to get a North view)</string>
    <string name="chk1_question1">1. What do elevation tints use to show the relief on maps?</string>
    <string name="chk1_question2">2. Look at the example. Do these legends show a classification by elevation tints?</string>
    <string name="chk1_question3">3. Look around you. How many colors you do need to use to represent the surrounding area on a 1:20K map using elevation tints?</string>
    <string name="chk1_question4">4. Why were the previous answers not suitable for elevation tints?</string>
    <string name="chk1_question5">5. How many colors do elevation tints usually use?</string>
    <string name="chk1_question6">6. Look at the example. Find the elevation of the marked point using the information given by elevation tints.</string>
    <string name="chk2_question1">1. Which technique is used to represent rocks and cliffs on maps?</string>
    <string name="chk2_question2">2. Take a careful look at the examples and choose <b>three statements</b> that are valid for the hachuring technique.</string>
    <string name="chk2_question3">3. Look around you and compare the map with what you see. How is hachuring used on the map?\n<b>Select two statements.</b></string>
    <string name="chk2_question4">4. Look at the mountain peaks around you. Compare the map with what you see and discuss the hachuring technique used. Use your conclusions in the next question.</string>
    <string name="chk2_question4_hint">DISCUSS:\nHow was the hachuring made?\nDoes it show well what you see in reality?\nIdentify the most prominent parts of the hachuring. Is there a difference in representing steep slopes and rocky cliffs?\nEtc.</string>
    <string name="chk3_question1">1. In which ways does shading represent relief on maps?\nMore than one answer may be correct.</string>
    <string name="chk3_question2">2. Look at the example. What is the <b>most important</b> element for relief shading?</string>
    <string name="chk3_question3">4. Since the light source is normally at the NW, the terrain is usually illuminated from:</string>
    <string name="chk3_question4">5. Compare the examples. What may happen if we change the position of the light source for 180 degrees, from the upper left (upper map) to the bottom right (lower map) corner?</string>
    <string name="chk3_question5">3. Look at the map. Try to find the position of the light source used for terrain shading? Compare with what you see around you and with information given by contour lines.</string>
    <string name="chk3_question6">6. Does the terrain shading give enough information for a detailed understanding of the terrain?</string>
    <string name="chk3_question7">7. Carefully check the two example maps and then evaluate the statement:\n<i><b>Considering contour lines is important for proper terrain shading.</b></i></string>
    <string name="chk4_question1">1. Which <b>three statements</b> are true for contour lines?</string>
    <string name="chk4_question2">2. What are the <b>two further characteristics</b> of contour lines?</string>
    <string name="chk1_comprehension_question">Is the choice of colors in elevation tints arbitrary? If not, how should these colors be arranged? Look again around you and argue how many and which colors would you use to represent your surrounding on maps of large and small scales?</string>
    <string name="chk2_comprehension_question">What is the purpose of hachuring?\nSelect the statement(s) you consider most relevant.</string>
    <string name="chk2comp_hint">You will not get points here. Your answers will be saved as your summary of the topic.</string>
    <string name="chk2comp_answ1">To make the map look like it has more content.</string>
    <string name="chk2comp_answ2">To give more accurate information on elevations.</string>
    <string name="chk2comp_answ3">To show the best locations for alpine climbing.</string>
    <string name="chk2comp_answ4">To show good artistic skills.</string>
    <string name="chk2comp_answ5">To use graphical tricks to give steep rocks depicted on a map equivalent visual importance compared to that observed in nature.</string>
    <string name="chk4q1answ1">Contour lines are never closed polylines like circles.</string>
    <string name="chk4q1answ2">Concentric circles of contour lines indicate a hilltop, mountain peak, or depression.</string>
    <string name="chk4q1answ3">Distance between contour lines on the map is proportional to the slope.</string>
    <string name="chk4q1answ4">Distance between contour lines on the map is not proportional to the slope.</string>
    <string name="chk4q1answ5">Contour lines are perpendicular to lines of steepest slopes.</string>
    <string name="chk4q1answ6">Contour lines are never perpendicular to lines of steepest slopes.</string>
</resources>